docs(multiple): fix examples on small screens (#31741)

--- a/src/components-examples/cdk-experimental/radio-group/radio-common.css
+++ b/src/components-examples/cdk-experimental/radio-group/radio-common.css
@@ -1,5 +1,6 @@
 .example-radio-controls {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 16px;
   padding-bottom: 16px;
